# azure-openai-sample

./: .gitignore  ReadMe.md
dotnet-semantic-kernel-sample/backend/dotnet/sk-backend-api/: sk-backend-api.sln
dotnet-semantic-kernel-sample/backend/dotnet/sk-backend-api/sk-backend-api/: .gitignore  Dockerfile  Program.cs  README.md  appsettings.json  customer.db  sk-backend-api.csproj  sk-backend-api.http
dotnet-semantic-kernel-sample/backend/dotnet/sk-backend-api/sk-backend-api/Controllers/: CustomersController.cs  PluginsSKController.cs
dotnet-semantic-kernel-sample/backend/dotnet/sk-backend-api/sk-backend-api/Data/: ApplicationDbContext.cs
dotnet-semantic-kernel-sample/backend/dotnet/sk-backend-api/sk-backend-api/Migrations/: 20240810151556_InitialCreate.Designer.cs  20240810151556_InitialCreate.cs  ApplicationDbContextModelSnapshot.cs
dotnet-semantic-kernel-sample/backend/dotnet/sk-backend-api/sk-backend-api/Model/: Customer.cs
dotnet-semantic-kernel-sample/backend/dotnet/sk-backend-api/sk-backend-api/Properties/: launchSettings.json
langchain-api-sample/: AppSetup.md  README.md  pyproject.toml
langchain-api-sample/app/: server.py
langchain-codeBERT/: ReadMe.md  java_find_method_v1.py
langchain-codeBERT/src/: HelloWorld.java
langchain-sql-sample/: ReadMe.md  sql.ipynb  testsql.db
patience-care-sample/: ReadMe.md  requirements.txt
patient-care-sample/: Dockerfile  main.py
patient-care-sample/test/: generate_sample_pdf.py
sample-chatbot/: chatbot.py
test-sql/: ReadMe.md  main.py  requirements.txt
(+2 files in other folders)
